# VulkanRenderer

./: CMakeLists.txt  README.md  camera.h  default.frag  default.vert  glsl_compiler.h  logger.h  main.cpp  material.h  mesh.cpp  skybox.cpp  skybox.frag  skybox.h  skybox.vert  ui_overlay.cpp  uniform_buffer.h  vertex.h  vulkan_context.h  vulkan_renderer.h
assets/shaders/: default.frag  default.vert
assets/shaders/skybox/: skybox.frag
src/: camera.cpp  main.cpp  material.cpp  mesh.h  model_loader.cpp  model_loader.h  shader.cpp  shader.h  skybox.cpp  skybox.h  texture.cpp  texture.h  ui_overlay.h  vulkan_context.cpp  vulkan_renderer.cpp  vulkan_renderer.h
